CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3l
------------
* Counter attack status effect implemented (Set trap ability).
* Implemented and activated Ranger job.
* Added the odd shop to Rigard shopping street. You can buy some strapons there.
* Fixed some bullshit enemy AI. Ability use should actually draw SP now. Might have caused some bugs, report if the game crashes mid-fight.
* Kiai anal fix.
* Fixed a few bugs in feline scenes.
* Fixed a few bugs in equine scenes.
* Fixed a bug in fera scenes.
* Fixed a bug in elven nectar scene.
* Fixed some Cale typos.
* Fixed exp to level for Terry and Miranda.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3k3
-------------
* Fixed a few Cale related bugs.
* Fixed a Cale bug that would break the cheat Cavalcade fuck if you were pure female.
* Fixed an error in lust gain that was causing unintentional massive lust spikes.
* Fixed an error where nasty Miranda wouldn't let you through the main gate, even if you had a pass.
* Fixed inn companion prompt.
* Added a Bleed status effect. Any form of healing will remove it.
* Fixed an error in job stat growth. Lib and Cha were swapped.

Version 0.3k2
-------------
* Fixing various bugs and missing tags in Cale.
* Fixed a but in Kiakai's anal catch scene.
* Tweaked the output of Cavalcade a bit.
* Better pics for Kiakai.
* The "new" Miranda stuff added in Version 0.3k should be available for nasty Miranda too (note that take home doesn't have any scenes yet).

Version 0.3k
------------
* Fixed various typos and minor bugs caused by me changing stuff in the backend.
* Added some sex exp/stat calls that were missing.
* You can now visit Miranda's home for sexings during the hunting for Terry quest.