@@ -65,6 +65,8 @@ java -jar compiler.jar --compilation_level SIMPLE_OPTIMIZATIONS --js \
 	js/loc/rigard/castle.js \
 	js/loc/rigard/clothstore.js \
 	js/loc/rigard/sexstore.js \
+	js/loc/rigard/armorstore.js \
+	js/loc/rigard/weaponstore.js \
 	js/loc/rigard/inn.js \
 	js/loc/rigard/magetower.js \
 	js/loc/treecity/treecity.js \
